<resources>
    <string name="app_name">DesignLoginScreen</string>

    <string name="welcome_logo">welcome_logo</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_description">Sign in or register for your personal or business account</string>
    <string name="welcome_sign_in_button">Sign in</string>
    <string name="welcome_create_account_button">Create Account</string>
    <string name="welcome_terms_and_conditions">By logging in or registering, you have agreed to <a href="http://www.google.com">Terms and Conditions</a> And <a href="http://www.google.com">Privacy Policy</a>.</string>

    <string name="sign_in_social_network_description">You can use your social networks to login to the app</string>
    <string name="sign_in_divider_text">OR</string>
    <string name="sign_in_error_text">All fields must be filled</string>
    <string name="sign_in_email_text">Email address</string>
    <string name="sign_in_email_hint_text">some@gmail.com</string>
    <string name="sign_in_password_text">Password</string>
    <string name="sign_in_password_hint_text">Enter your password</string>
    <string name="sign_in_forgot_password_button">Forgot Password?</string>
    <string name="sign_in_done_button">Sign in</string>

    <string name="create_account_social_network_description">You can use social networks to register a new account</string>
    <string name="create_account_divider_text">OR</string>
    <string name="create_account_error_text">All fields must be filled</string>
    <string name="create_account_full_name_text">Full name</string>
    <string name="create_account_full_name_hint_text">Enter your full name</string>
    <string name="create_account_email_text">Email address</string>
    <string name="create_account_email_hint_text">some@gmail.com</string>
    <string name="create_account_password_text">Password</string>
    <string name="create_account_password_hint_text">Enter your password</string>
    <string name="create_account_registration_button">Registration</string>
</resources>