<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.fragment.welcome.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/global_margin_normal"
        android:paddingEnd="@dimen/global_margin_normal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_3xl"
            android:adjustViewBounds="true"
            android:paddingStart="-32dp"
            android:paddingEnd="-32dp"
            android:src="@drawable/logo_welcome"
            android:contentDescription="@string/welcome_logo" />

        <TextView
            style="@style/AppTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_3xl"
            android:text="@string/welcome_title" />

        <TextView
            style="@style/AppPlainText.Center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_3xs"
            android:text="@string/welcome_description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_welcome_sign_in"
            style="@style/AppPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_3xl"
            android:background="@drawable/bg_primary_button"
            android:text="@string/welcome_sign_in_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_welcome_create_account"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_3xs"
            android:background="@drawable/bg_secondary_button"
            android:text="@string/welcome_create_account_button" />

        <TextView
            style="@style/AppPlainText.Center.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_margin_normal"
            android:layout_marginBottom="@dimen/global_margin_3xs"
            android:autoLink="web"
            android:text="@string/welcome_terms_and_conditions"
            android:textColorLink="@color/link" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>